src/main/java/com/example/nbd/exceptions/invalidParametersExceptions/InvalidParametersException.java
package com.example.nbd.exceptions.invalidParametersExceptions;

public class InvalidParametersException extends Exception {
    public InvalidParametersException(String message) {
        super(message);
    }
}
